[project]
name = "jaxtree-extensions"
version = "0.2.0"
description = "Additional pytree utilities for JAX"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Paul Gekeler", email = "pgekeler@gmail.com" },
]
keywords = ["jax", "pytree", "utilities"]
requires-python = ">=3.10"
dependencies = [
    "jax",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff",
    "mypy",
    "jaxtyping",
    "beartype",
    "equinox",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "hippogriffe",
]

[project.urls]
Homepage = "https://paulgekeler.github.io/jaxtree_extensions/"
Repository = "https://github.com/paulgekeler/jaxtree_extensions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jaxtree_extensions"]
exclude = [
  "/tests",
]

# Ruff config
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E/W = pycodestyle, F = Pyflakes (logic), I = isort (imports), UP = pyupgrade
select = ["E", "W", "F", "I", "UP", "B", "D"]
ignore = ["E501", "E741", "F722", "F821", "D105", "D107", "D417"]
extend-select = ["W505"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# mypy config
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

